--- a/index.html
+++ b/index.html
@@ -14,54 +14,96 @@
 		<div class="container-fluid" id="background" >
 
 			<!--Homepage-->
-			<div class="homePage">
-				<div class="container">
+			<div class="homePage container">
 
-					<!-- Brand name and navbar -->
-	    			<div class="row navBarRow">
+				<!-- Brand name and navbar -->
+	    		<div class="row navBarRow">
 
-						<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" id="brandName">
-							LENDWELL
-						</div>
-
-						<div class="col-lg-5 col-md-8 col-sm-10 col-xs-10 offset-lg-5 offset-md-2" align="right" id="navBar">
-							<ul class="list-inline">
-								<li class="list-inline-item">FEATURES</li>
-								<li class="list-inline-item">ABOUT</li>
-								<li class="list-inline-item">HOW IT WORKS</li>
-								<li class="list-inline-item">DOWNLOAD</li>
-							</ul>
-						</div>
+					<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" id="brandName">
+						LENDWELL
 					</div>
 
-					<!-- First Page Content -->
-					<div class="row" style="width:auto; height:900px;">
-
-							<div class="col-lg-7 col-md-7 col-xs-8 align-self-center d-md-none homePageContentForSmallResolution" align="left">
-								<p class="firstPageContentHeader">Introducing Iolite app landing template </p>
-								<p class="firstPageContentText">Iolite is great new responsive app landing page template for your awesome app. This is freebie from uimint.com & you will get useful resources from there.</p>
-								<button class="downloadButton" style="background-color:transparent; border:none;">
-									<img src="images/buttonDownload.png">
-								</button>
-							</div>
-
-		    				<div class="col-lg-5 col-md-5 col-sm-12" id="homePageImage">
-		    					<img src="images/phone.png" id="homePageImageSize">
-		    				</div>
-
-		    			
-							<div class="col-lg-7 col-md-7 col-xs-8 align-self-center homePageContentVisibilityForBigResolutio" align="left">
-								<p class="firstPageContentHeader">Introducing Iolite app landing template </p>
-								<p class="firstPageContentText">Iolite is great new responsive app landing page template for your awesome app. This is freebie from uimint.com & you will get useful resources from there.</p>
-								<br>
-								<button class="downloadButton" style="background-color:transparent; border:none;">
-										<img class="buttonHover" src="images/buttonDownload.png">
-								</button>
-							</div>
-
+					<div class="col-lg-5 col-md-8 col-sm-10 col-xs-10 offset-lg-5 offset-md-2" align="right" id="navBar">
+						<ul class="list-inline">
+							<li class="list-inline-item">FEATURES</li>
+							<li class="list-inline-item">ABOUT</li>
+							<li class="list-inline-item">HOW IT WORKS</li>
+							<li class="list-inline-item">DOWNLOAD</li>
+						</ul>
 					</div>
 				</div>
-			</div>
+
+				<!-- First Page Content -->
+				<div class="row" style="width:auto; height:900px;">
+
+					<div class="col-lg-7 col-md-7 col-xs-8 align-self-center d-md-none homePageContentForSmallResolution" align="left">
+						<p class="firstPageContentHeader">Introducing Iolite app landing template </p>
+						<p class="firstPageContentText">Iolite is great new responsive app landing page template for your awesome app. This is freebie from uimint.com & you will get useful resources from there.</p>
+						<button class="downloadButton" style="background-color:transparent; border:none;">
+							<img src="images/buttonDownload.png">
+						</button>
+					</div>
+
+		   				<div class="col-lg-5 col-md-5 col-sm-12" id="homePageImage">
+		   					<img src="images/phone.png" id="homePageImageSize">
+		   				</div>
+		    			
+						<div class="col-lg-7 col-md-7 col-xs-8 align-self-center homePageContentVisibilityForBigResolutio" align="left">
+							<p class="firstPageContentHeader">Introducing Iolite app landing template </p>
+							<p class="firstPageContentText">Iolite is great new responsive app landing page template for your awesome app. This is freebie from uimint.com & you will get useful resources from there.</p>
+							<br>
+							<button class="downloadButton" style="background-color:transparent; border:none;">
+								<img class="buttonHover" src="images/buttonDownload.png">
+							</button>
+						</div>        
+					</div>
+				</div>
+
+			<!-- Features Page -->
+			<div class="container" align="center">
+				<div class="featuresContentRows row align-items-end" id="firstFeaturesRow">
+
+					<div class="featuresContent col-lg-3 col-md-4 col-sm-12 col-xs-12">
+						<img class="featuresIconsSize"  src="images/cropIcon.png">
+						<p class="featuresContentHeaders">Clean and Responsive</p>
+						<p class="featuresContentText">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at nibh orci. </p>
+					</div>
+					<div class="featuresContent col-lg-3 col-md-4 col-sm-12 col-xs-12">
+						<img class="featuresIconsSize"  src="images/cubeIcon.png">
+						<p class="featuresContentHeaders">Retina Ready</p>
+						<p class="featuresContentText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at nibh orci.</p>
+					</div>
+					<div class="featuresContent col-lg-3 col-md-4 col-sm-12 col-xs-12 ">
+						<img class="featuresIconsSize"  src="images/magicIcon.png">
+						<p class="featuresContentHeaders">Build with Bootstrap</p>
+						<p class="featuresContentText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at nibh orci.</p>
+					</div>
+					<div class="featuresContent col-lg-3 col-md-2 col-sm-12 col-xs-12" id="forkIconDisabledForTablets">
+						<img class="featuresIconsSize" src="images/forkIcon.png">
+						<p class="featuresContentHeaders">Easy to Customize</p>
+						<p class="featuresContentText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at nibh orci.</p>
+					</div>
+				</div> 
+
+				<div class="featuresContentRows row align-items-start" style="width:100%; height:50vh" id="secondFeaturesRow">	
+
+					<div class="featuresContent col-md-4" id="forkIconEnabledForTablet">
+						<img class="featuresIconsSize" src="images/forkIcon.png">
+						<p class="featuresContentHeaders">Easy to Customize</p>
+						<p class="featuresContentText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at nibh orci.</p>
+					</div>
+
+					<div class="featuresContent col-lg-3 col-md-4 col-sm-12 col-xs-12 offset-lg-3  ">
+						<img class="featuresIconsSize"  src="images/rocketIcon.png">
+						<p class="featuresContentHeaders">Hundreds of Icons
+						<p class="featuresContentText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at nibh orci.</p></div>
+					<div class="featuresContent col-lg-3 col-md-4 col-sm-12 col-xs-12" align="center">
+					<img class="featuresIconsSize"  src="images/databaseIcon.png">
+						<p class="featuresContentHeaders">Multiple Layout</p>
+						<p class="featuresContentText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at nibh orci.</p></div>
+				</div>  
+			</div>    
 		</div> 
 </body>
 </html>
