--- a/index.html
+++ b/index.html
@@ -96,12 +96,15 @@
 
 					<div class="featuresContent col-lg-3 col-md-4 col-sm-12 col-xs-12 offset-lg-3  ">
 						<img class="featuresIconsSize"  src="images/rocketIcon.png">
-						<p class="featuresContentHeaders">Hundreds of Icons
-						<p class="featuresContentText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at nibh orci.</p></div>
-					<div class="featuresContent col-lg-3 col-md-4 col-sm-12 col-xs-12" align="center">
-					<img class="featuresIconsSize"  src="images/databaseIcon.png">
+						<p class="featuresContentHeaders">Hundreds of Icons</p>
+						<p class="featuresContentText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at nibh orci.</p>
+					</div>
+
+					<div class="featuresContent col-lg-3 col-md-4 col-sm-12 col-xs-12" id="databaseIconMargin">
+					<img class="featuresIconsSize" src="images/databaseIcon.png">
 						<p class="featuresContentHeaders">Multiple Layout</p>
-						<p class="featuresContentText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at nibh orci.</p></div>
+						<p class="featuresContentText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at nibh orci.</p>
+					</div>
 				</div>  
 			</div>    
 		</div> 
