--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						LENDWELL
 					</div>
 
-					<div class="col-lg-5 col-md-8 col-sm-10 col-xs-10 offset-lg-5 offset-md-2" align="right" id="navBar">
+					<div class="col-lg-5 col-md-8 col-sm-10 col-xs-12 offset-lg-5 offset-md-2" align="right" id="navBar">
 						<ul class="list-inline">
 							<li class="list-inline-item">FEATURES</li>
 							<li class="list-inline-item">ABOUT</li>
@@ -86,7 +86,55 @@
 					</div>
 				</div> 
 
-				<div class="featuresContentRows row align-items-start" style="width:100%; height:50vh" id="secondFeaturesRow">	
+				<div class="featuresContentRows row align-items-start" id="secondFeaturesRow">	
+
+					<div class="featuresContent col-md-4" id="forkIconEnabledForTablet">
+						<img class="featuresIconsSize" src="images/forkIcon.png">
+						<p class="featuresContentHeaders">Easy to Customize</p>
+						<p class="featuresContentText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at nibh orci.</p>
+					</div>
+
+					<div class="featuresContent col-lg-3 col-md-4 col-sm-12 col-xs-12 offset-lg-3  ">
+						<img class="featuresIconsSize"  src="images/rocketIcon.png">
+						<p class="featuresContentHeaders">Hundreds of Icons</p>
+						<p class="featuresContentText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at nibh orci.</p>
+					</div>
+
+					<div class="featuresContent col-lg-3 col-md-4 col-sm-12 col-xs-12">
+					<img class="featuresIconsSize" src="images/databaseIcon.png">
+						<p class="featuresContentHeaders">Multiple Layout</p>
+						<p class="featuresContentText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at nibh orci.</p>
+					</div>
+				</div>  
+			</div>    
+			<!-- Features Page -->
+			<div class="container" align="center">
+				<div class="featuresContentRows row align-items-end" id="firstFeaturesRow">
+
+					<div class="featuresContent col-lg-3 col-md-4 col-sm-12 col-xs-12">
+						<img class="featuresIconsSize"  src="images/cropIcon.png">
+						<p class="featuresContentHeaders">Clean and Responsive</p>
+						<p class="featuresContentText">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at nibh orci. </p>
+					</div>
+					<div class="featuresContent col-lg-3 col-md-4 col-sm-12 col-xs-12">
+						<img class="featuresIconsSize"  src="images/cubeIcon.png">
+						<p class="featuresContentHeaders">Retina Ready</p>
+						<p class="featuresContentText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at nibh orci.</p>
+					</div>
+					<div class="featuresContent col-lg-3 col-md-4 col-sm-12 col-xs-12 ">
+						<img class="featuresIconsSize"  src="images/magicIcon.png">
+						<p class="featuresContentHeaders">Build with Bootstrap</p>
+						<p class="featuresContentText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at nibh orci.</p>
+					</div>
+					<div class="featuresContent col-lg-3 col-md-2 col-sm-12 col-xs-12" id="forkIconDisabledForTablets">
+						<img class="featuresIconsSize" src="images/forkIcon.png">
+						<p class="featuresContentHeaders">Easy to Customize</p>
+						<p class="featuresContentText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at nibh orci.</p>
+					</div>
+				</div> 
+
+				<div class="featuresContentRows row align-items-start" id="secondFeaturesRow">	
 
 					<div class="featuresContent col-md-4" id="forkIconEnabledForTablet">
 						<img class="featuresIconsSize" src="images/forkIcon.png">
