--- a/index.html
+++ b/index.html
@@ -36,21 +36,21 @@
 				<!-- First Page Content -->
 				<div class="row" style="width:auto; height:900px;">
 
-					<div class="col-lg-7 col-md-7 col-xs-8 align-self-center d-md-none homePageContentForSmallResolution" align="left">
-						<p class="firstPageContentHeader">Introducing Iolite app landing template </p>
-						<p class="firstPageContentText">Iolite is great new responsive app landing page template for your awesome app. This is freebie from uimint.com & you will get useful resources from there.</p>
+					<div class="col-sm-12  col-xs-12 align-self-center d-md-none homePageContentForSmallResolution" align="left">
+						<p class="textHeaders">Introducing Iolite app landing template </p>
+						<p class="contentText">Iolite is great new responsive app landing page template for your awesome app. This is freebie from uimint.com & you will get useful resources from there.</p>
 						<button class="downloadButton" style="background-color:transparent; border:none;">
 							<img src="images/buttonDownload.png">
 						</button>
 					</div>
 
-		   				<div class="col-lg-5 col-md-5 col-sm-12" id="homePageImage">
-		   					<img src="images/phone.png" id="homePageImageSize">
+		   				<div class="col-lg-5 col-md-5 col-sm-12 phoneImage">
+		   					<img src="images/phone.png" class="phoneImageSize">
 		   				</div>
 		    			
-						<div class="col-lg-7 col-md-7 col-xs-8 align-self-center homePageContentVisibilityForBigResolutio" align="left">
-							<p class="firstPageContentHeader">Introducing Iolite app landing template </p>
-							<p class="firstPageContentText">Iolite is great new responsive app landing page template for your awesome app. This is freebie from uimint.com & you will get useful resources from there.</p>
+						<div class="col-lg-7 col-md-7 align-self-center homePageContentVisibilityForBigResolutio" align="left">
+							<p class="textHeaders">Introducing Iolite app landing template </p>
+							<p class="contentText">Iolite is great new responsive app landing page template for your awesome app. This is freebie from uimint.com & you will get useful resources from there.</p>
 							<br>
 							<button class="downloadButton" style="background-color:transparent; border:none;">
 								<img class="buttonHover" src="images/buttonDownload.png">
@@ -109,29 +109,27 @@
 			</div>    
 
 			<!--Description Page-->
-			<div class="container">
-
+			<div class="container descriptionPage">
 				<div class="row" style="width:auto; height:1010px;">
 
-					<div class="col-lg-7 col-md-7 col-xs-8 align-self-center d-md-none homePageContentForSmallResolution" align="left">
-						<p class="firstPageContentHeader">Introducing Iolite app landing template </p>
-						<p class="firstPageContentText">Iolite is great new responsive app landing page template for your awesome app. This is freebie from uimint.com & you will get useful resources from there.</p>
-						<button class="downloadButton" style="background-color:transparent; border:none;">
-							<img src="images/buttonDownload.png">
-						</button>
+					<div class=" col-sm-12 col-xs-12 align-self-center d-md-none pageContentForSmallResolution" align="left">
+						<p class="textHeaders descriptionPageHeaders">Description Third Layout</p>
+						<p class="contentText descriptionPageText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tincidunt efficitur vestibulum. Phasellus nisl leo, congue eu malesuada lobortis, fringilla et nulla. Curabitur posuere, sem nec bibendum finibus, erat turpis congue tellus, id sagittis eros purus quis odio. Etiam ut auctor mi. Nam enim augue, placerat ut pellentesque ac, dictum nec ligula. Maecenas venenatis nisi porta neque volutpat, nec vestibulum quam<span>elementum
+						</span>. Nunc blandit elit in pretium ultrices. 
+						<br>
+						Cras dapibus accumsan ex a luctus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam maximus rhoncus orci, tempor mollis purus euismod sed. Proin aliquam nibh eros, iaculis accumsan dolor tempor ac. Proin commodo elementum magna at aliquam. Donec semper libero ut ipsum pharetra eleifend. Etiam rhoncus orci metus, eget pulvinar quam lobortis.</p>
 					</div>
 
-		   				<div class="col-lg-5 col-md-5 col-sm-12" id="homePageImage">
-		   					<img src="images/phone.png" id="homePageImageSize">
+		   				<div class="col-lg-4 col-md-4 col-sm-12 phoneImage" >
+		   					<img src="images/phoneSecond.png" class="phoneImageSize">
 		   				</div>
 		    			
-						<div class="col-lg-7 col-md-7 col-xs-8 align-self-center homePageContentVisibilityForBigResolutio" align="left">
-							<p class="firstPageContentHeader">Introducing Iolite app landing template </p>
-							<p class="firstPageContentText">Iolite is great new responsive app landing page template for your awesome app. This is freebie from uimint.com & you will get useful resources from there.</p>
-							<br>
-							<button class="downloadButton" style="background-color:transparent; border:none;">
-								<img class="buttonHover" src="images/buttonDownload.png">
-							</button>
+						<div class="col-lg-7 col-md-8 offset-lg-1 align-self-center homePageContentVisibilityForBigResolutio" align="left">
+							<p class="textHeaders descriptionPageHeaders">Description Third Layout</p>
+						<p class="contentText descriptionPageText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tincidunt efficitur vestibulum. Phasellus nisl leo, congue eu malesuada lobortis, fringilla et nulla. Curabitur posuere, sem nec bibendum finibus, erat turpis congue tellus, id sagittis eros purus quis odio. Etiam ut auctor mi. Nam enim augue, placerat ut pellentesque ac, dictum nec ligula. Maecenas venenatis nisi porta neque volutpat, nec vestibulum quam<span>elementum
+						</span>. Nunc blandit elit in pretium ultrices. 
+						<br>
+						Cras dapibus accumsan ex a luctus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam maximus rhoncus orci, tempor mollis purus euismod sed. Proin aliquam nibh eros, iaculis accumsan dolor tempor ac. Proin commodo elementum magna at aliquam. Donec semper libero ut ipsum pharetra eleifend. Etiam rhoncus orci metus, eget pulvinar quam lobortis.</p>
 						</div>        
 					</div>
 				</div>
