--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
 				<p class="contentText" style="color:white;">Showcase your app screenshots into a nice carousel below. You can add as many screenshots as you want.</p>
 
 				<!-- Carusel for md and larger and sm resolution --> 
-				<div id="carouselExampleIndicators" class="carousel slide contentVisibilityForBigResolutio " data-ride="carousel">
+				<div id="carouselFirst" class="carousel slide" data-ride="carousel">
 				    <ol class="carousel-indicators">
-				    	<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-				    	<li  data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-				   		<li data-target="#carouselExampleIndicators"  data-slide-to="2"></li>
+				    	<li data-target="#carouselFirst" data-slide-to="0" class="active"></li>
+				    	<li  data-target="#carouselFirst" data-slide-to="1"></li>
+				   		<li data-target="#carouselFirst"  data-slide-to="2"></li>
 				    </ol>
 
 					<div class="carousel-inner">
@@ -132,13 +132,7 @@
 					    <div class="carousel-item">
 					      <img class="d-block w-100" src="images/screenshots.png" alt="Third slide">
 					    </div>
-					  </div>
 					</div>
-
-					<!--Gallery for small resolutions -->
-					<div class="d-md-none"><img class="screenshots" src="images/screenshots.png" >
-					<img class="screenshots" src="images/screenshots.png">
-					<img class="screenshots" src="images/screenshots.png">
 				</div>
 			</div>
 		</div>		
