--- a/index.html
+++ b/index.html
@@ -160,9 +160,12 @@
 										<img class="descriptionPageIcons" src="images/shieldIcon.png">
 									</div>
 									<div>
+										<p class="h6">
 										Hundreds of Icons
-										</br>
+										</p>
+										<p>
 										Ipsum dolor sit amet, consectetur adipiscing elit ...
+										</p>
 									</div>
 								</li>
 								</br>
@@ -173,9 +176,12 @@
 										<img class="descriptionPageIcons" src="images/cssIcon.png">
 									</div>
 									<div>
+										<p class="h6">
 										Eazy to Customize
-										</br>
+										</p>
+										<p>
 										Ipsum dolor sit amet, consectetur adipiscing elit ...
+										</p>
 									</div>
 								</li>
 								</br>
@@ -186,9 +192,12 @@
 										<img class="descriptionPageIcons"  src="images/fileIcon.png">
 									</div>
 									<div>
+										<p class="h6">
 										Clean and Responsive
-										</br>
+										</p>
+										<p>
 										Consectetur adipiscing elit. Integer tincidunt efficitur ...
+										</p>
 									</div>
 								</li>
 								</br>
@@ -198,9 +207,12 @@
 										<img class="descriptionPageIcons" src="images/tasksIcon.png">
 									</div>
 									<div>
+										<p class="h6">
 										Multiple Layout
-										</br>
+										</p>
+										<p>
 										Adipiscing elit. Integer tincidunt efficitur vestibulum sit ...
+										</p>
 									</div>
 								</li>
 								</br>
