--- a/index.html
+++ b/index.html
@@ -271,26 +271,13 @@
 					Phasellus nisl leo congue eu malesuada lobortis fringilla et nulla. Curabitur posuere sem nec bibendum finibus.</p>
 
 				<div class="row">
-					<div class="col-md-6 col-sm-12 col-12 d-md-none appleButton" >
+					<div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 col-12 offset-md-1" >
 						<button type="button" >
 							<img src="images/appStoreButton.png">
 						</button>
 					</div>
 
-					<div class=" col-md-6 col-sm-12 col-12 d-md-none androidutton" >
-						<button type="button" >
-							<img src="images/androidButton.png">
-						</button>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 col-12 offset-md-1 appleButton contentVisibilityForBigResolutio " align="right">
-						<button type="button" >
-							<img src="images/appStoreButton.png">
-						</button>
-					</div>
-
-					<div class="col-xl-5 col-lg-6 col-md-5 col-sm-12 col-12 androidutton contentVisibilityForBigResolutio" align="left">
+					<div class="col-xl-5 col-lg-6 col-md-5 col-sm-12 col-12" >
 						<button type="button" >
 							<img src="images/androidButton.png">
 						</button>
