--- a/index.html
+++ b/index.html
@@ -17,27 +17,26 @@
 		<div class="homepageContainer">
 			<div class="container">
 				<!-- Brand name and navbar -->
-	    		<div class="navBarRow">
+	    		<div class="headRow">
 					<div class="col-12" id="brandName">
 						LENDWELL
 					</div>
 				</div>
 			</div>
-
 		</div>
-				<!-- First Page Content -->
-		<div class="firstPageRow">
+				<!-- HomePage Content -->
+		<div class="headPageRow">
 			<div class="container">
 				<div class="row flex-row-reverse">
 					<!--Text for xs and sm resolution -->
-					<div class="col-12 col-md-7 align-self-center homePageContentForSmallResolution">
+					<div class="col-12 col-md-7 align-self-center homePageContent">
 						<p class="textHeaders">Introducing Iolite app landing template </p>
 						<p class="firstPagecontentText">Iolite is great new responsive app landing page template for your awesome app. This is freebie from uimint.com & you will get useful resources from there.</p>
 						<a href="#" class="btn btn-info">Download App</a>
 					</div>
 
-		   			<div class="col-12 col-md-5 phonesImages">
-		   				<img src="images/phone.png" class="firsAndSecondPhoneImageSize">
+		   			<div class="col-12 col-md-5 homePageImage">
+		   				<img src="images/phone.png">
 		   			</div>
 				</div>
 					
@@ -47,39 +46,38 @@
 		<!-- Features Page -->
 		<div class="featuresContainer" align="center">
 			<div class="container">
-				<div class="featuresContentRows row align-items-end" id="firstFeaturesRow">
+				<div class="featuresContentRows row align-items-end">
 
-					<div class="featuresContent col-lg-3 col-md-4 col-sm-12 col-12">
-						<img class="featuresIconsSize"  src="images/cropIcon.png">
+					<div class="col-lg-3 col-md-4 col-sm-12 col-12">
+						<img src="images/cropIcon.png">
 						<p class="featuresContentHeaders">Clean and Responsive</p>
 						<p class="contentText">
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at nibh orci. </p>
 					</div>
-					<div class="featuresContent col-lg-3 col-md-4 col-sm-12 col-12">
-						<img class="featuresIconsSize"  src="images/cubeIcon.png">
+					<div class="col-lg-3 col-md-4 col-sm-12 col-12">
+						<img src="images/cubeIcon.png">
 						<p class="featuresContentHeaders">Retina Ready</p>
 						<p class="contentText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at nibh orci.</p>
 					</div>
-					<div class="featuresContent col-lg-3 col-md-4 col-sm-12 col-12 ">
-						<img class="featuresIconsSize"  src="images/magicIcon.png">
+					<div class="col-lg-3 col-md-4 col-sm-12 col-12 ">
+						<img src="images/magicIcon.png">
 						<p class="featuresContentHeaders">Build with Bootstrap</p>
 						<p class="contentText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at nibh orci.</p>
 					</div>
-					<!-- fork icon for evry resolution except medium -->
-					<div class="featuresContent col-lg-3 col-md-4 col-12" id="">
-						<img class="featuresIconsSize" src="images/forkIcon.png">
+					<div class="col-lg-3 col-md-4 col-12" >
+						<img src="images/forkIcon.png">
 						<p class="featuresContentHeaders">Easy to Customize</p>
 						<p class="contentText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at nibh orci.</p>
 					</div>
 
-					<div class="featuresContent col-lg-3 col-md-4 col-sm-12 col-12 offset-lg-3  ">
-						<img class="featuresIconsSize"  src="images/rocketIcon.png">
+					<div class="col-lg-3 col-md-4 col-sm-12 col-12 offset-lg-3  ">
+						<img src="images/rocketIcon.png">
 						<p class="featuresContentHeaders">Hundreds of Icons</p>
 						<p class="contentText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at nibh orci.</p>
 					</div>
 
-					<div class="featuresContent col-lg-3 col-md-4 col-sm-12 col-12">
-						<img class="featuresIconsSize" src="images/databaseIcon.png">
+					<div class="col-lg-3 col-md-4 col-sm-12 col-12">
+						<img src="images/databaseIcon.png">
 						<p class="featuresContentHeaders">Multiple Layout</p>
 						<p class="contentText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at nibh orci.</p>
 					</div>
@@ -147,6 +145,7 @@
 		   				<img src="images/phoneThird.png" class="thirdPhoneImageSize">
 		   			</div>
 		    			
+	
 					<div class="col-lg-6 col-md-8 col-sm-12 col-12 offset-lg-1 align-self-center ">
 						<p class="textHeaders firstDescriptionPageHeaders">Description First Layout</p>
 						<p class="contentText descriptionPageText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tincidunt efficitur vestibulum. Phasellus nisl leo, congue eu malesuada lobortis, fringilla et nulla.</p>
