--- a/index.html
+++ b/index.html
@@ -143,7 +143,6 @@
 		   				<img src="images/phoneThird.png">
 		   			</div>
 		    			
-	
 					<div class="col-lg-6 col-md-8 col-sm-12 col-12 offset-lg-1 align-self-center ">
 						<p class="textHeaders headersColor">Description First Layout</p>
 						<p class="contentText descriptionPageText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tincidunt efficitur vestibulum. Phasellus nisl leo, congue eu malesuada lobortis, fringilla et nulla.</p>
@@ -153,7 +152,7 @@
 
 								<li class="list-inline-item row ">
 									<div class='badge' >
-										<img class="descriptionPageIcons" src="images/shieldIcon.png">
+										<img src="images/shieldIcon.png">
 									</div>
 									<div>
 										<p class="h6">
@@ -166,10 +165,9 @@
 								</li>
 								</br>
 
-
 								<li class="list-inline-item row ">
 									<div class='badge'>
-										<img class="descriptionPageIcons" src="images/cssIcon.png">
+										<img src="images/cssIcon.png">
 									</div>
 									<div>
 										<p class="h6">
@@ -182,10 +180,9 @@
 								</li>
 								</br>
 
-
 								<li class="list-inline-item row ">
 									<div class='badge'>
-										<img class="descriptionPageIcons"  src="images/fileIcon.png">
+										<img  src="images/fileIcon.png">
 									</div>
 									<div>
 										<p class="h6">
@@ -200,7 +197,7 @@
 
 								<li class="list-inline-item row ">
 									<div class='badge'>
-										<img class="descriptionPageIcons" src="images/tasksIcon.png">
+										<img src="images/tasksIcon.png">
 									</div>
 									<div>
 										<p class="h6">
@@ -212,6 +209,7 @@
 									</div>
 								</li>
 								</br>
+								
 							</ul>
 						</div>
 					</div> 
