--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						<a href="#" class="btn btn-info">Download App</a>
 					</div>
 
-		   			<div class="col-12 col-md-5 homePageImage">
+		   			<div class="col-12 col-md-5 homePageImage" align="center">
 		   				<img src="images/phone.png">
 		   			</div>
 				</div>
@@ -209,7 +209,7 @@
 									</div>
 								</li>
 								</br>
-								
+
 							</ul>
 						</div>
 					</div> 
@@ -222,11 +222,11 @@
 			<div class="container">
 				
 				<!-- Carusel for md and larger and sm resolution --> 
-				<div class="carousel slide  quotesCarousel" id="carouselIndicators2" data-ride="carousel">
+				<div class="carousel slide  quotesCarousel" id="carousel2" data-ride="carousel">
 				 	<ol class="carousel-indicators">
-					    <li data-target="#carouselIndicators2" data-slide-to="0" class="active"></li>
-					    <li  data-target="#carouselIndicators2" data-slide-to="1"></li>
-					    <li data-target="#carouselIndicators2"  data-slide-to="2"></li>
+					    <li data-target="#carousel2" data-slide-to="0" class="active"></li>
+					    <li  data-target="#carousel2" data-slide-to="1"></li>
+					    <li data-target="#carousel2"  data-slide-to="2"></li>
 				    </ol>
 
 					<div class="carousel-inner">
@@ -234,21 +234,21 @@
 					    <div class="carousel-item active">
 					    	<div>
 					    		<p class="firstPagecontentText secondCarouselText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris quis nostrud nisi ut aliquip ex ea commodo consequat.</p>
-								<p class="contentText" style="color:white;">Jhone Due, Photographer</p>
+								<p class="contentText" >Jhone Due, Photographer</p>
 							</div>     	
 					    </div>
 
 					    <div class="carousel-item ">
 					    	<div>
 					    		<p class="firstPagecontentText secondCarouselText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris quis nostrud nisi ut aliquip ex ea commodo consequat.</p>
-								<p class="contentText" style="color:white;">Jhone Due, Photographer</p>
+								<p class="contentText">Jhone Due, Photographer</p>
 							</div>     	
 					    </div>
 
 					    <div class="carousel-item ">
 					    	<div>
 					    		<p class="firstPagecontentText secondCarouselText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris quis nostrud nisi ut aliquip ex ea commodo consequat.</p>
-								<p class="contentText" style="color:white;">Jhone Due, Photographer</p>
+								<p class="contentText">Jhone Due, Photographer</p>
 							</div> 
 						</div>
 					</div>
