--- a/index.html
+++ b/index.html
@@ -265,13 +265,13 @@
 					Phasellus nisl leo congue eu malesuada lobortis fringilla et nulla. Curabitur posuere sem nec bibendum finibus.</p>
 
 				<div class="row">
-					<div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 col-12 offset-md-1" >
+					<div class=" col-lg-3 col-md-5 col-sm-12 col-12 offset-md-1 offset-lg-3" >
 						<button type="button" >
 							<img src="images/appStoreButton.png">
 						</button>
 					</div>
 
-					<div class="col-xl-5 col-lg-6 col-md-5 col-sm-12 col-12" >
+					<div class="col-lg-3 col-md-5 col-sm-12 col-12" >
 						<button type="button" >
 							<img src="images/androidButton.png">
 						</button>
