--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 			</div>
 		</div>
 		<div class="footer text-center">
-			<p class="contentText ">Created by Aleksandra Korczyńska</p>
+			<p class="contentText ">Coded by Aleksandra Korczyńska</p>
 		</div>
 	</body>
 </html>
